cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project( HistogramFilter )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( hist main.cpp simulator.cpp filter.cpp robot.cpp common.cpp)
target_link_libraries( hist ${OpenCV_LIBS} )